<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.QuizFragment">
    <data>
        <variable name = "viewModel" type="com.example.android_quiz.viewmodel.QuizViewModel"/>
        <import type="android.view.View"/>

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     >

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linearProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:progress="@{viewModel.progress}"
            app:indicatorColor="@color/green"
            app:layout_constraintTop_toTopOf="parent"
            app:trackThickness="15dp"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="51dp" />

        <TextView
            android:id="@+id/question_left_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_left"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@+id/question_left_display"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <TextView
            android:id="@+id/question_left_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@={`` + viewModel.questionAmount}"
            app:layout_constraintBottom_toBottomOf="@+id/question_left_text"
            app:layout_constraintEnd_toStartOf="@+id/score_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/question_left_text" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/score"
            app:layout_constraintBottom_toBottomOf="@+id/question_left_display"
            app:layout_constraintEnd_toStartOf="@+id/score_display"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/question_left_display" />

        <TextView
            android:id="@+id/score_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={`` + viewModel.showScore}"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/score_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/score_text" />


        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.currentQuestion}"
            android:layout_margin="20dp"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/quiz_recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".40"
            android:layout_marginRight="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/submit_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText"
            tools:listitem="@layout/fragment_quiz_item">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".08"
            android:enabled="false"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="@+id/next_question"
            app:layout_constraintEnd_toStartOf="@+id/next_question"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_question"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:enabled="false"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".08"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/submit_answers"
            app:layout_constraintTop_toBottomOf="@id/time_taken" />


        <Chronometer
            android:id="@+id/time_taken"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_recyclerView" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_circle"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminate="true"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>